# docs/swagger.json
@@ -13,7 +13,7 @@
                         "BasicAuth": []
                     }
                 ],
-                "description": "Add actor to the System and get it's ID. User should be an admin.",
+                "description": "Add actor to the System and get it's ID. User should be an admin. All fields are required.",
                 "consumes": [
                     "application/json"
                 ],
@@ -31,7 +31,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Actor"
+                            "$ref": "#/definitions/models.ActorIn"
                         }
                     }
                 ],
@@ -91,7 +91,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Actor"
+                            "$ref": "#/definitions/models.ActorOut"
                         }
                     },
                     "400": {
@@ -120,7 +120,7 @@
                         "BasicAuth": []
                     }
                 ],
-                "description": "Update actor in the System. User should be an admin.",
+                "description": "Update actor in the System. User should be an admin. All fields are not required.",
                 "consumes": [
                     "application/json"
                 ],
@@ -145,7 +145,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Actor"
+                            "$ref": "#/definitions/models.ActorIn"
                         }
                     }
                 ],
@@ -248,7 +248,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Actor"
+                                "$ref": "#/definitions/models.ActorOut"
                             }
                         }
                     },
@@ -298,7 +298,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Movie"
+                            "$ref": "#/definitions/models.MovieIn"
                         }
                     }
                 ],
@@ -362,7 +362,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Movie"
+                            "$ref": "#/definitions/models.MovieIn"
                         }
                     }
                 ],
@@ -473,7 +473,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Movie"
+                                "$ref": "#/definitions/models.MovieOut"
                             }
                         }
                     },
@@ -522,7 +522,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Movie"
+                                "$ref": "#/definitions/models.MovieOut"
                             }
                         }
                     },
@@ -571,7 +571,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Movie"
+                                "$ref": "#/definitions/models.MovieOut"
                             }
                         }
                     },
@@ -649,7 +649,24 @@
         }
     },
     "definitions": {
-        "models.Actor": {
+        "models.ActorIn": {
+            "type": "object",
+            "properties": {
+                "date_of_birth": {
+                    "description": "DateOfBirth - дата рождения актёра.",
+                    "type": "string"
+                },
+                "gender": {
+                    "description": "Gender - пол актёра.",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "Name - имя актёра.",
+                    "type": "string"
+                }
+            }
+        },
+        "models.ActorOut": {
             "type": "object",
             "properties": {
                 "date_of_birth": {
@@ -677,7 +694,35 @@
                 }
             }
         },
-        "models.Movie": {
+        "models.MovieIn": {
+            "type": "object",
+            "properties": {
+                "actors": {
+                    "description": "Actors - список id актёров, принимавших участие в фильме.",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "description": {
+                    "description": "Description - описание фильма.",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "Name - название фильма.",
+                    "type": "string"
+                },
+                "rating": {
+                    "description": "Rating - рэйтинг фильма.",
+                    "type": "integer"
+                },
+                "release_date": {
+                    "description": "ReleaseDate - дата выпуска фильма.",
+                    "type": "string"
+                }
+            }
+        },
+        "models.MovieOut": {
             "type": "object",
             "properties": {
                 "actors": {
@@ -712,10 +757,6 @@
         "models.User": {
             "type": "object",
             "properties": {
-                "id": {
-                    "description": "Id - id пользователя.",
-                    "type": "integer"
-                },
                 "is_admin": {
                     "description": "IsAdmin - флаг, указывающий на то, является ли пользователь администратором.",
                     "type": "boolean"
@@ -724,7 +765,7 @@
                     "description": "Nickname - никнейм (логин) пользователя.",
                     "type": "string"
                 },
-                "password db:": {
+                "password": {
                     "description": "Password - пароль пользователя.",
                     "type": "string"
                 }
